--- a/src/container/Projects/Projects.scss
+++ b/src/container/Projects/Projects.scss
@@ -5,15 +5,17 @@
 @import "../../utilities/effect-mixins";
 
 .projects {
+  
   @include adaptTo("not-mobile") {
     height: 100%;
-    width: 100%;
+    width: 95%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
     margin-top: 50px;
-    padding: 0;
+    margin-left: 50px;
+    margin-right: 20px; 
   }
 
   &__header {
@@ -25,8 +27,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr); 
     grid-template-rows: repeat(2, 1fr); 
-    gap: 20px 20px;
-    overflow: hidden;
+    gap: 10px 40px;
     flex-wrap: wrap;
     margin-right: 50px;
     
@@ -34,7 +35,7 @@
 
   &__card {
     @include adaptTo("not-mobile") {
-
+      @include spriteEffect;
     }
 
     &--title {
@@ -65,8 +66,6 @@
       line-height: 1.5rem;
       list-style-type: none
     }
-
-    @include spriteEffect;
   }
 
   &__mini {
