--- a/src/utilities/_effect-mixins.scss
+++ b/src/utilities/_effect-mixins.scss
@@ -5,7 +5,7 @@
     height: 70px;
     width: 1px;
     position: absolute;
-    left: -30px;
+    left: -15px;
     top: 50%;
     transition: top, opacity;
     transition-duration: 600ms;
@@ -27,7 +27,7 @@
     height: 70px;
     width: 1px;
     position: absolute;
-    left: -30px;
+    left: -15px;
     top: 80%;
     transition: top, opacity;
     transition-duration: 600ms;
